index.css
html {
    text-align: center;
}

body {
    background-color: forestgreen;
    font-size: 25px;
    color:white;
    font-family: 'Courier New', Courier, monospace;
}

h1 {
    font-family: Papyrus;
    font-size: 75px;
    padding: 0;
    margin: 0;
}

a {
    color: white;
}

a:hover {
    color: burlywood;
    font-weight: bold;
}
img {
    width: 45rem;
    height: 30rem;
}

a#choice {
    text-decoration: none;
    font-style: italic;
    font-weight: bold;
}

a#choice:hover {
    color: burlywood;
}

div:hover p{
    animation:  shake 0.8s  ;
  }
  
  @keyframes shake{
    0%{
      transform: translateX(0)
    }
    25%{
      transform: translateX(15px);
    }
      
    50%{
      transform: translateX(-15px);
    }
    100%{
      transform: translateX(0px);
    }
  }

  div img {
    animation: shake 0.5s;
    animation-iteration-count: infinite;
  }
  
  @keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    
    20% { transform: translate(-3px, 0px) rotate(1deg); }
   
    40% { transform: translate(1px, -1px) rotate(1deg); }
  
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    
    80% { transform: translate(-1px, -1px) rotate(1deg); }
   
    100% { transform: translate(1px, -2px) rotate(-1deg); }
  }

